crates/bit_tests/src/codegen/snapshots/watt_tests__codegen__enums__wrong_enum_with_generics.snap
---
source: crates/bit_tests/src/codegen/enums.rs
expression: "\nenum Result[V, E] {\n    Ok(value: V),\n    Err(error: E)\n}\n\nfn main() {\n    let a = Result.Ok(200);\n    a = Result.Err(false);\n    let b: Result[float, bool] = a;\n}\n    "
---
Source code:

enum Result[V, E] {
    Ok(value: V),
    Err(error: E)
}

fn main() {
    let a = Result.Ok(200);
    a = Result.Err(false);
    let b: Result[float, bool] = a;
}
    

Generation result:
typeck::types_missmatch

  × types missmatch. expected `Result[Float, Bool]`, got `Result[Int, Bool]`.

Hint: 
  💡 here...
    ╭─[buggy:10:5]
  9 │     a = Result.Err(false);
 10 │     let b: Result[float, bool] = a;
    ·     ──────────────────────────────
 11 │ }
    ╰────
